crates/ars-components/src/overlay/snapshots/ars_components__overlay__dialog__tests__dialog_description.snap
---
source: crates/ars-components/src/overlay/dialog.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).description_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "description",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "dialog",
            ),
        ),
        (
            Id,
            String(
                "dialog-description",
            ),
        ),
    ],
    styles: [],
}
