crates/ars-components/src/overlay/snapshots/ars_components__overlay__dialog__tests__dialog_positioner.snap
---
source: crates/ars-components/src/overlay/dialog.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).positioner_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "positioner",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "dialog",
            ),
        ),
    ],
    styles: [],
}
