crates/ars-components/src/overlay/snapshots/ars_components__overlay__dialog__tests__dialog_root_open_modal_alertdialog.snap
---
source: crates/ars-components/src/overlay/dialog.rs
expression: "snapshot_attrs(&service.connect(&|_| {}).root_attrs())"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "root",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "dialog",
            ),
        ),
        (
            Data(
                "ars-state",
            ),
            String(
                "open",
            ),
        ),
    ],
    styles: [],
}
